Fix running tests with maven